Prevent sticky header from covering the editor. Dragging up doen't work when the top portion of the editor is covered.

--- a/scripts/apps/authoring/styles/authoring.scss
+++ b/scripts/apps/authoring/styles/authoring.scss
@@ -38,7 +38,7 @@
     .page-content-container {
         left:0;
         right:50px;
-        top: 27px;
+        top: 38px;
     }
 
     .widget-wrapper {
@@ -515,7 +515,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin: 10px 0;
+    margin: 0 0 10px 0;
 
     > * {
         display: flex;
